--- a/css/card.css
+++ b/css/card.css
@@ -37,49 +37,79 @@ body {
     opacity: 1;
 }
 
-.stylish {
-    display:block;
-    width:100px;
-    height:100px;
-    border-radius:66px;
-    border:4px double #ccc;
-    font-size:20px;
-    color:#666;
-    line-height:100px;
-    text-align:center;
-    text-decoration:none;
-    text-shadow:0 1px 0 #fff;
-    background:#ddd;
-    /* position:relative; */
-    margin:0 auto;
-    clear:left;
-    height:auto;
-    /* z-index: -1; */
-    top: -580px;
-}
-
-.stylish:hover {
-    border:4px double #bbb;
-    color:#aaa;
-    text-decoration:none;
-    background:#e6e6e6;
-}
-
 .bar{
-    position:absolute;
+    z-index: -1;
+    /* position:absolute; */
     /* Center circle */
+    /* top:-50px;
+    left: 83px;
+    height:100px;
+    width:100px;
+    background-color: rgba(0,0,0,0.6); */
+    /* -webkit-transform: rotate(180deg); */
+    border-radius:100px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    border:5px solid #16a085;
+    /* background: url(http://cdn.bavotasan.com/wp-content/uploads/2011/02/desktop.jpg) no-repeat; */
+    /* color: #fff; */
+}
+
+img{
+    position:absolute;
     top:-50px;
     left: 83px;
     height:100px;
     width:100px;
     background-color: rgba(0,0,0,0.6);
-    -webkit-transform: rotate(180deg);
     border-radius:100px;
     -webkit-border-radius: 100px;
     -moz-border-radius: 100px;
     border:5px solid #16a085;
-    background: url(http://cdn.bavotasan.com/wp-content/uploads/2011/02/desktop.jpg) no-repeat;
-    /* color: #fff; */
+}
 
-    
+.tab {
+    /* z-index:-1; */
+    /* Font color */
+    color: white;
+    background: #16a085;
+    width: 250px;
+    /* height: 225px; */
+    /* Keep box elements flat */
+    /* box-shadow: 0 2px 4px rgba(0,0,0,0.5); */
+    border-radius: 2px 2px;
+    /* Tab Color */
+    border-bottom-width: 2px;
+    padding: 10px; 
+
+    margin: 0 auto 10px;
+    -webkit-transition: all 300ms ease;
+    -moz-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
+    transition: all 300ms ease;
+    -webkit-transform:  translate3d(0px, 100px, 0) rotateX(-30deg) scale(1.25, 1.25);
+    -moz-transform: translate3d(0px, 100px, 0) rotateX(-30deg) scale(1.25, 1.25);
+    transform: translate3d(0px, 100px, 0) rotateX(-30deg) scale(1.25, 1.25);
+    opacity: 0;
+}
+
+.block.img {
+    position:absolute;
+
+    color: white;
+    background: #16a085;
+    width: 250px;
+    border-radius: 2px 2px;
+    border-bottom-width: 2px;
+    padding: 10px; 
+
+    margin: 0 auto 10px;
+    -webkit-transition: all 300ms ease;
+    -moz-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
+    transition: all 300ms ease;
+    -webkit-transform:  translate3d(0px, 100px, 0) rotateX(-30deg) scale(1.25, 1.25);
+    -moz-transform: translate3d(0px, 100px, 0) rotateX(-30deg) scale(1.25, 1.25);
+    transform: translate3d(0px, 100px, 0) rotateX(-30deg) scale(1.25, 1.25);
+    opacity: 0;
 }
