--- a/css/card.css
+++ b/css/card.css
@@ -65,7 +65,8 @@ body {
     border-radius:100px;
     -webkit-border-radius: 100px;
     -moz-border-radius: 100px;
-    border:5px solid #16a085;
+    /* border:5px solid #16a085; */
+    box-shadow: 0px 0px 0px 5px #16a085;
 }
 
 .tab {
